# GDBUS-DEMOE

./: .gitignore  CMakeLists.txt  README.en.md  README.md  toolchain.cmake
client/: CMakeLists.txt  libClient.c
example/: CMakeLists.txt  CltExample.c
gdbus/: CMakeLists.txt  ExampleGdbusGenerated.c  ExampleGdbusGenerated.h  cn.RTplay.Gdbus.Example.xml
includes/: dbusCommon.h  libClient.h
server/: CMakeLists.txt  libServer.c  libServer.h
